force-app/main/default/objects/Inventory__c/fields/QuantityCapacityCompare__c.field-meta.xml
<CustomField>
    <fullName>QuantityCapacityCompare__c</fullName>
    <formula>If ( (20/100) &gt;= (Quantity__c /  Capacity__c ) , &apos;true&apos;, &apos;false&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QuantityCapacityCompare</label>
    <type>Text</type>
</CustomField>