force-app/main/default/objects/Inventory__c/validationRules/Capacity_Not_Negative.validationRule-meta.xml
<ValidationRule>
    <fullName>Capacity_Not_Negative</fullName>
    <active>true</active>
    <errorConditionFormula>Capacity__c &lt; 0</errorConditionFormula>
    <errorMessage>Capacity must be greater or equal to 0</errorMessage>
</ValidationRule>