force-app/main/default/objects/Inventory__c/validationRules/Inventory_Must_Not_Be_Zero.validationRule-meta.xml
<ValidationRule>
    <fullName>Inventory_Must_Not_Be_Zero</fullName>
    <active>true</active>
    <errorConditionFormula>Capacity__c &lt; 0</errorConditionFormula>
    <errorMessage>Capacity must be greater or equal to 0</errorMessage>
</ValidationRule>