force-app/main/default/objects/Inventory__c/validationRules/Quantity_Not_Negative.validationRule-meta.xml
<ValidationRule>
    <fullName>Quantity_Not_Negative</fullName>
    <active>true</active>
    <errorConditionFormula>Quantity__c &lt; 0</errorConditionFormula>
    <errorMessage>Quantity cannot be negative</errorMessage>
</ValidationRule>