force-app/main/default/objects/Inventory__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Capacity__c</columns>
    <columns>Store__c</columns>
    <columns>Quantity__c</columns>
    <columns>QuantityCapacityCompare__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>